[workspace]
resolver = "2"
members = [
    "foundation",
]

[package]
name = "rally"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rally"
path = "src/main.rs"

[dependencies]
foundation = { path = "./foundation" }
tokio = { version = "1.14.0", features = ["full"] }
http = "1.3.1"
hyper = { version = "1.7.0", features = ["http1", "http2"] }
http-body-util = "0.1.3"
