[workspace]
resolver = "2"
members = [
    "async_runtime",
    "client", "data_layer", "server",
]

[package]
name = "rally"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rally"
path = "src/main.rs"

[dependencies]
client = { path = "./client" }
data_layer = { path = "./data_layer" }
server = { path = "./server" }
async_runtime = { path = "./async_runtime" }