[package]
name = "foundation"
version = "0.1.0"
edition = "2024"

[dependencies]
async-task = "4.4.0"
futures-lite = "2.6.1"
flume = "0.11.1"

 hyper = { version = "1.7.0", features = ["http1", "http2"] }
smol = "2.0.2"
anyhow = "1.0.70"
http = "1.3.1"
tokio = "1.14.0"
mio = { version = "1.0.2", features = ["net", "os-poll"] }
hyper-util = { version = "0.1.17", features = ["client-legacy", "tokio"] }
tokio-native-tls = "0.3.1"
http-body-util = "0.1.3"
native-tls = "0.2.14"
tower = "0.5.2"
