[package]
name = "foundation"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
futures = "0.3"
num_cpus = "1.13"
mio = { version = "1.0.2", features = ["net", "os-poll"] }
pin-project-lite = "0.2"
tokio = { version = "1.14.0", features = ["full"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
hyper = { version = "1.7.0", features = ["http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2"] }
tower = "0.4"
http = "1.3.1"
http-body-util = "0.1.3"
lazy_static = "1.4"
futures-timer = "3.0"
